@@ -6,6 +6,7 @@ require "parse.pl";
 require "debug.pl";
 require "filesys.pl";
 require "share.pl";
+require "print.pl";
 
 
 @platforms = ( "redhat-6.2", "redhat-7.0", "debian-2.2" );
@@ -94,17 +95,31 @@ sub test_interfaces
 
 # ---
 
-#$arr = &xst_filesys_parse_fstab ("/etc/fstab");
-#$arr = &xst_filesys_parse_mtab ("/etc/mtab");
+$hash = &xst_print_conf_get ();
+&xst_debug_print_struct ($hash);
+
+# @arr = &xst_parse_cap_sections ("/etc/termcap");
+
+# for $i (@arr)
+# {
+#   my $tc = &xst_parse_cap      ("/etc/termcap", $i, "tc");
+#   my $am = &xst_parse_cap_bool ("/etc/termcap", $i, "am");
+#    print "$i\t\t($tc)";
+# 	print " (am)" if ($am == 1);
+#	print "\n";
+# }
+
+# $arr = &xst_filesys_parse_fstab ("/etc/fstab");
+# $arr = &xst_filesys_parse_mtab ("/etc/mtab");
 
 # print @arr[0] . "\n";
 
 # &xst_filesys_table_remove ($arr, &xst_filesys_table_find ($arr, "point", "/"));
 # &xst_filesys_table_remove ($arr, &xst_filesys_table_find ($arr, "point", "/mnt/floppy"));
-#&xst_debug_print_struct ($arr);
+# &xst_debug_print_struct ($arr);
 
-$table = &xst_share_parse_smb_conf ("/etc/samba/smb.conf");
-&xst_share_replace_smb_conf ("/etc/samba/smb.conf.test", $table);
+# $table = &xst_share_parse_smb_conf ("/etc/samba/smb.conf");
+# &xst_share_replace_smb_conf ("/etc/samba/smb.conf.test", $table);
 
 # &test_interfaces();
 # &test_media();
